@@ -1,3 +1,9 @@
+2001-12-27  Jochen Wiedmann  <joe@ispsoft.de> (2.1006)
+
+	* Within AutoCommit mode, reconnect is now turned
+	  off, because the transaction state is unpredictable
+	  otherwise.
+
 2001-12-13  Jochen Wiedmann  <joe@ispsoft.de> (2.1005)
 
 	* dbdimp.c: Added use of SvMAGICAL to dbd_db_quote.
